--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!-- <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Oswald:300,400,600,700" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Oswald:300,400,600,700|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" type="image/png" href="images/potato.png">
 
 
   </head>
