make my profile prettier

--- a/index.html
+++ b/index.html
@@ -2,25 +2,22 @@
 <html>
   <head>
     <!-- Google result text-->
-  <title>Potatoes</title>
-  <!-- Google result description-->
-  <meta charset="utf-8">
-  <!-- Fontawesome Stylesheet -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Oswald:300,400,600,700" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Oswald:300,400,600,700|Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" type="image/png" href="images/potato.png">
-
-
+    <title>Potatoes</title>
+    <!-- Google result description-->
+    <meta charset="utf-8">
+    <!-- Fontawesome Stylesheet -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Oswald:300,400,600,700" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Oswald:300,400,600,700|Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="images/potato.png">
   </head>
-
   <body>
     <div class="container">
       <div class="card">
         <img src="images/stan.jpg" alt="Stanislas Grobien" class="me">
         <h1>STANISLAS GROBIEN<br></h1>
-        <h2><br>Project manager & Web developer<br>'Rookie Spanker' at <a href="http://lafesseemusicale.fr/" target="_blank"><strong>La Féssée Musicale</strong></a></h2>
+        <h2><br>Project manager & Web developer<br>'Rookie Spanker' at <a href="http://lafesseemusicale.fr/" target="_blank"><strong>La Fessée Musicale</strong></a></h2>
         <p>Master degree ESCE Paris, french & german nationality<br>1 year in the video games sector / 1,5 year in the web industry<br>hobbies : vinyl digger, dj (alias 'Bobbin') and tennis player</p>
       </div>
       <div class="card">
@@ -32,38 +29,38 @@
         </ul>
       </div>
       <div class="card">
-      <h2>"You should watch..."</h2>
-      <table>
-        <tbody>
-          <tr>
-            <td>
-              <img src="images/prestige.jpg" alt="The Prestige">
-            </td>
-            <td class="film">
-              <h3>The Prestige</h3>
-              <p>After a tragic accident, two stage magicians engage in a battle to create the ultimate illusion while sacrificing everything they have to outwit each other.</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <img src="images/village.jpg" alt="The Village">
-            </td>
-            <td class="film">
-              <h3>The Village</h3>
-              <p>A series of events tests the beliefs of a small isolated countryside village.</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <img src="images/utopia.jpg" alt="Utopia">
-            </td>
-            <td class="film">
-              <h3>Utopia</h3>
-              <p>After a group of people, who meet online, discover a bizarre graphic novel which seems to hold mysterious answers, they find themselves being tracked down by a merciless organization known merely as 'The Network'.</p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </body>
-</html>
+        <h2>"You should watch..."</h2>
+        <table>
+          <tbody>
+            <tr>
+              <td>
+                <img src="images/prestige.jpg" alt="The Prestige">
+              </td>
+              <td class="film">
+                <h3>The Prestige</h3>
+                <p>After a tragic accident, two stage magicians engage in a battle to create the ultimate illusion while sacrificing everything they have to outwit each other.</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <img src="images/village.jpg" alt="The Village">
+              </td>
+              <td class="film">
+                <h3>The Village</h3>
+                <p>A series of events tests the beliefs of a small isolated countryside village.</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <img src="images/utopia.jpg" alt="Utopia">
+              </td>
+              <td class="film">
+                <h3>Utopia</h3>
+                <p>After a group of people, who meet online, discover a bizarre graphic novel which seems to hold mysterious answers, they find themselves being tracked down by a merciless organization known merely as 'The Network'.</p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </body>
+  </html>
